# Fulmen-archived-

./: .breakpoints  birthday.py  event.py  main.py  music.py  pyproject.toml
cogs/: Logs.py  beta.py  config.py  info.py  level.py  mod.py  music.py  mute.py  ticket.py  useful.py
data/: 876812555924947024.txt  data.db  database.db  test.db
