[tool.poetry]
name = "repl_python3_Fulmen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
youtube_dl = "^2021.6.6"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
replit = "^3.2.4"
better-profanity = "^0.7.0"
db = "^0.1.1"
python-dotenv = "^0.19.0"
aiosqlite = "^0.17.0"
antispam = "^0.0.10"
Discord-Anti-Spam = "^0.9.0"
aiofiles = "^0.7.0"
humanize = "^3.11.0"
wavelink = "^0.9.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
